test/1.2/errors/T_ETYPE.dml
/*
  © 2021 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;
device etype;

typedef uint32 foo_t;

// type symbols not yet initialized when constants are evaluated
/// ERROR ETYPE
constant c = cast(3, foo_t);

/// ERROR ETYPE
data foo x;

data layout "little-endian" {
    /// ERROR ETYPE
    undefined_type_t t;
} l;

/// ERROR ETYPE
method bar(undefined_type_t *t){}

/// ERROR ETYPE
implement xyz { method m() {} }

// For legacy reasons: no error in DML 1.2 for unused types and extern symbols
extern undefined_type_t undef_ret();
extern void undef_arg(undefined_type_t);
extern undefined_type undef_val;
extern typedef void undef_arg(undefined_type_t);
extern typedef undefined_type_t undef_type_alias_t;

method init() {
    /// ERROR ETYPE
    local foo bar;
    /// ERROR ETYPE
    log "info": "%d", cast(4, foo);
    local int x;
    /// ERROR ETYPE
    x = cast(2, foo);
    /// ERROR ETYPE
    cast(NULL, foo)();
    /// ERROR ETYPE
    cast(NULL, foo).bar;
}
